[package]
name = "rumsimop"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "crdgen"
path = "src/crdgen.rs"

[dependencies]
lazy_static = "1.4"
kube = { version = "0.89.0", features = ["runtime", "derive"] }
k8s-openapi = { version = "0.21.1", features = ["latest"] }
serde = "1.0.197"
serde_yaml = "0.9.34"
serde_json = "1.0.115"
schemars = "0.8.16"
thiserror = "1.0.58"
tokio = { version = "1.37.0", features = ["macros", "rt-multi-thread"] }
futures = "0.3.30"
