[package]
name = "rumsimop"
version = "0.1.3"
edition = "2021"

[[bin]]
name = "crdgen"
path = "src/crdgen.rs"

[dependencies]
lazy_static = "1.4"
kube = { version = "0.90", features = ["runtime", "derive"] }
k8s-openapi = { version = "0.21", features = ["latest"] }
serde = "1.0"
serde_yaml = "0.9"
serde_json = "1.0"
schemars = "0.8"
thiserror = "1.0"
tokio = { version = "1.37", features = ["macros", "rt-multi-thread"] }
futures = "0.3"
opentelemetry = { version = "0.22" }
opentelemetry_sdk = { version = "0.22", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.15", features = ["grpc-tonic"] }
opentelemetry-semantic-conventions = "0.14"
tracing = "0.1"
tracing-opentelemetry = "0.23"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tonic = "0.11"
